--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -87,6 +87,7 @@ $base-font-weight:    400 !default;
 $heading-font-weight: 400 !default;
 
 $icon-font-path:   'fonts' !default;
+$images-path:   'images' !default;
 
 $h6-size: 1.08em    !default;
 $h5-size: 1.15em    !default;
